<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.techgp.nimbus</groupId>
	<artifactId>nimbus</artifactId>
	<version>1.9-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Nimbus</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<dependencies>
		<!--
			https://github.com/guillaumeprevot/nimbus-java-api
			git clone + mvn install
		-->
		<dependency>
			<groupId>fr.techgp.nimbus</groupId>
			<artifactId>nimbus-java-api</artifactId>
			<version>1.18</version>
		</dependency>

		<!--
			https://www.eclipse.org/jetty/
			https://central.sonatype.com/artifact/org.eclipse.jetty/jetty-server
		-->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>11.0.25</version>
		</dependency>

		<!--
			https://freemarker.apache.org/
			https://central.sonatype.com/artifact/org.freemarker/freemarker
		-->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.34</version>
		</dependency>

		<!--
			https://github.com/google/gson
			https://central.sonatype.com/artifact/com.google.code.gson/gson
		-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.1</version>
		</dependency>

		<!--
			http://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
			https://central.sonatype.com/artifact/org.slf4j/slf4j-api
			https://central.sonatype.com/artifact/org.slf4j/slf4j-simple
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.17</version>
		</dependency>

		<!--
			https://jdbc.postgresql.org/download.html
			https://central.sonatype.com/artifact/org.postgresql/postgresql
		-->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.7</version>
		</dependency>

		<!--
			https://commons.apache.org/proper/commons-dbcp/
			https://central.sonatype.com/artifact/org.apache.commons/commons-dbcp2
		-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
			<version>2.13.0</version>
		</dependency>

		<!--
			https://commons.apache.org/proper/commons-io/
			https://central.sonatype.com/artifact/commons-io/commons-io
		-->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.19.0</version>
		</dependency>

		<!--
			https://commons.apache.org/proper/commons-imaging/
			https://central.sonatype.com/artifact/org.apache.commons/commons-imaging
		-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-imaging</artifactId>
			<version>1.0.0-alpha6</version>
		</dependency>

		<!--
			https://pdfbox.apache.org/
			https://central.sonatype.com/artifact/org.apache.pdfbox/pdfbox
		-->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.5</version>
		</dependency>

		<!--
			https://www.bouncycastle.org/latest_releases.html
			https://central.sonatype.com/artifact/org.bouncycastle/bcprov-jdk18on
		-->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.81</version>
		</dependency>

		<!--
			https://github.com/mpatric/mp3agic
			https://central.sonatype.com/artifact/com.mpatric/mp3agic
		-->
		<dependency>
			<groupId>com.mpatric</groupId>
			<artifactId>mp3agic</artifactId>
			<version>0.9.1</version>
		</dependency>

		<!--
			https://github.com/drewnoakes/metadata-extractor/releases
			https://central.sonatype.com/artifact/com.drewnoakes/metadata-extractor
		-->
		<dependency>
			<groupId>com.drewnoakes</groupId>
			<artifactId>metadata-extractor</artifactId>
			<version>2.19.0</version>
		</dependency>

		<!--
			http://www.jthink.net/jaudiotagger/
			https://central.sonatype.com/artifact/net.jthink/jaudiotagger
		-->
		<dependency>
			<groupId>net.jthink</groupId>
			<artifactId>jaudiotagger</artifactId>
			<version>3.0.1</version>
		</dependency>

		<!--
			http://image4j.sourceforge.net/
			https://central.sonatype.com/artifact/org.jclarion/image4j
		-->
		<dependency>
			<groupId>org.jclarion</groupId>
			<artifactId>image4j</artifactId>
			<version>0.7</version>
		</dependency>

		<dependency>
			<groupId>fr.techgp.deps</groupId>
			<artifactId>jave</artifactId>
			<version>1.0.2</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jave/jave-1.0.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>fr.techgp.deps</groupId>
			<artifactId>javazoom</artifactId>
			<version>2010</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/javazoom/mp3spi1.9.5.jar</systemPath>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/</sourceDirectory>
		<outputDirectory>bin/</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<!-- mvn dependency:copy-dependencies -DincludeScope=runtime -DoutputDirectory=lib -->
					<execution>
						<id>get-jars</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>lib</outputDirectory>
						</configuration>
					</execution>
					<!-- mvn dependency:tree -Dverbose=true -DoutputType=txt -DoutputFile=pom.tree.txt -->
					<execution>
						<id>generate-dep-tree</id>
						<phase>validate</phase>
						<goals>
							<goal>tree</goal>
						</goals>
						<configuration>
							<outputFile>pom.tree.txt</outputFile>
							<outputType>txt</outputType>
							<verbose>true</verbose>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
